<resources>
    <string name="app_name">Fricipe - deine Rezepte App</string>

    <string name="navigation_drawer_open">Öffne Menü</string>
    <string name="navigation_drawer_close">Schließe Menü</string>

    <string name="title_activity_recipy">RecipyActivity</string>

    <string name="title_main_screen">Herzlich Willkommen zu Fricipe</string>
    <string name="text_main_screen">Wähle nun, ob du ein Rezept mit Zutaten aus deinem Kühlschrank erhalten möchtest oder ein beliebiges Rezept.</string>
    <string name="button_1">eigene Zutaten</string>
    <string name="button_2">zufälliges Rezept</string>
    <string name="text_1">Musik</string>
    <string name="text_2">Benachrichtigungen</string>
    <string name="button_3">An</string>
    <string name="button_4">Aus</string>
    <string name="button_5">An</string>
    <string name="button_6">Aus</string>


    <!-- Text für Rezepte -->

    <string name="recipe_name">Rezept Name</string>
    <string name="author">Autor</string>
    <string name="country">Herkunftsland</string>
    <string name="ingredients">Zutaten</string>
    <string name="description">Beschreibung</string>
    <string name="how_to">Zubreitung</string>


    <!-- Text Activity-recipe_list -->

    <string name="author2">von: </string>
    <string name="like">Likes: </string>

    <!-- Text Home Fragment -->
    <string name="random_recipe">zufälliges Rezept</string>


    <!-- Text Infomration Fragment -->
    <string name="developer1">Fabian Ziegler</string>
    <string name="developer2">Thomas Hofbauer</string>
    <string name="dev_description"> Dieses Projekt wurde anlässlich des Kurses Android SS2020 entwicklet </string>
    <string name="dev_title">Entwickler:</string>
    <string name="dev_copyright">©2021 Ziegler, Hofbauer</string>


    <!-- Text falls kein Rezept gefunden wurde -->
    <string name="nothing_found">Leider konnten wir kein passendes Rezept in unserer Datenbank finden.</string>
    <string name="back">zurück</string>
    <string name="next">weiter</string>


    <!-- Text für Zutaten -->

    <string name="ingredients2">Zutaten: </string>

    <!-- Fleisch -->
    <string name="beef">Rind</string>
    <string name="pork">Schwein</string>
    <string name="fish">Fisch</string>
    <string name="chicken">Hünchen</string>

    <!-- Gemüse -->
    <string name="mushroom">Schwammerl</string>
    <string name="peppers">Paprika</string>
    <string name="curcum">Gurke</string>
    <string name="tomato">Tomaten</string>
    <string name="corn">Mais</string>
    <string name="onion">Zwiebeln</string>
    <string name="avocado">Avocado</string>
    <string name="garliac">Knoblauch</string>
    <string name="potato">Kartoffeln</string>
    <string name="carrot">Karotten</string>

    <!-- Beilage -->
    <string name="rice">Reis</string>
    <string name="pasta">Nudeln</string>

    <!-- weiteres -->
    <string name="egg">Eier</string>
    <string name="flour">Mehl</string>
    <string name="sugar">Zucker</string>
    <string name="milk">Milch</string>
</resources>
