<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        app:srcCompat="@drawable/fricipe_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent_deepGreen"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/dev_description"
        android:textColor="@color/colorFont1"
        android:textSize="15sp"
        android:fontFamily="@font/regular" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/dev_title"
        android:textColor="@color/colorFont1"
        android:textSize="15sp"
        android:fontFamily="@font/bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/developer1"
        android:textColor="@color/colorFont1"
        android:textSize="20sp"
        android:textStyle="bold"  />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/developer2"
        android:textColor="@color/colorFont1"
        android:textSize="20sp"
        android:textStyle="bold"  />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/dev_copyright" />



</LinearLayout>
